[gd_scene load_steps=2 format=2]

[ext_resource path="res://Start.gd" type="Script" id=1]

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.6
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 0.75
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.9
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 256.988
margin_top = 105.449
margin_right = 378.988
margin_bottom = 119.449
text = "untitled mob game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_pressed"]
